--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "build": "npx tailwindcss -i ./src/assets/css/input.css -o ./src/output.min.css --minify"
   },
   "devDependencies": {
+    "postcss": "^8.4.24",
+    "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.3.2"
   }
 }
